# rust-sdk

./: .coderabbit.yaml  .gitignore  BOOTSTRAP.md  CHANGELOG.md  CONFORMANCE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  Makefile  PLAN.md  README.md  RFC-0001-v2.md  clippy.toml  codecov.yml  deny.toml  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: rust-clippy.yml  security-audit.yml  test.yml
crates/arcp/: CONFORMANCE.md  Cargo.toml  README.md
crates/arcp-actix-web/: Cargo.toml  README.md
crates/arcp-actix-web/src/: lib.rs
crates/arcp-axum/: Cargo.toml  README.md
crates/arcp-axum/src/: lib.rs
crates/arcp-client/: Cargo.toml  README.md
crates/arcp-client/src/: api.rs  handlers.rs  lib.rs
crates/arcp-core/: Cargo.toml  README.md
crates/arcp-core/src/: envelope.rs  error.rs  extensions.rs  ids.rs  lib.rs
crates/arcp-core/src/auth/: mod.rs
crates/arcp-core/src/messages/: artifacts.rs  control.rs  credentials.rs  execution.rs  mod.rs  permissions.rs  result_chunk.rs  session.rs  streaming.rs  subscriptions.rs  telemetry.rs  tests.rs
crates/arcp-core/src/transport/: memory.rs  mod.rs  stdio.rs  websocket.rs
crates/arcp-otel/: Cargo.toml  README.md
crates/arcp-otel/src/: lib.rs
crates/arcp-runtime/: Cargo.toml  README.md
crates/arcp-runtime/src/: lib.rs
crates/arcp-runtime/src/auth/: bearer.rs  jwt.rs  mod.rs  none.rs
crates/arcp-runtime/src/runtime/: artifact.rs  context.rs  credentials.rs  job.rs  mod.rs  server.rs  session.rs  subscription.rs  tools.rs
crates/arcp-runtime/src/runtime/server/: artifacts.rs  builder.rs  handshake.rs  jobs.rs  mod.rs  subscriptions.rs
crates/arcp-runtime/src/store/: credentials.rs  eventlog.rs  mod.rs  schema.sql
crates/arcp-tower/: Cargo.toml  README.md
crates/arcp-tower/src/: lib.rs
crates/arcp/examples/: README.md  axum_server.rs  cancellation.rs  capability_negotiation.rs  custom_auth.rs  extensions.rs  lease_expires_at.rs  stdio.rs  submit_and_stream.rs  tracing.rs  vendor_extensions.rs
crates/arcp/examples/delegation/: README.md  main.rs  synth.rs
crates/arcp/examples/handoff/: README.md  cheap.rs  main.rs
crates/arcp/examples/heartbeats/: README.md  main.rs  work.rs
crates/arcp/examples/job_subscribe/: main.rs
crates/arcp/examples/lease_revocation/: main.rs
crates/arcp/examples/leases/: README.md  agent.rs  main.rs
crates/arcp/examples/mcp/: main.rs  upstream.rs
crates/arcp/examples/permission_challenge/: agents.rs
crates/arcp/examples/provisioned_credentials/: main.rs
crates/arcp/examples/reasoning_streams/: agents.rs
crates/arcp/examples/resumability/: README.md
crates/arcp/examples/session_list_jobs/: main.rs
crates/arcp/examples/subscriptions/: README.md  main.rs  sinks.rs
crates/arcp/src/: lib.rs
crates/arcp/tests/: artifact.rs  cancellation.rs  cost_budget.rs  error_codes.rs  extension_unknown.rs  handshake.rs  handshake_ws.rs  job_lifecycle.rs  job_subscription.rs  lease_expires_at.rs  live_regressions.rs  provisioned_credentials.rs  result_chunk.rs  resume.rs  runtime_dispatch.rs  session_close.rs  subscription_scope.rs  terminal_retention.rs
crates/arcp/tests/common/: mod.rs
crates/arcp/tests/snapshots/: envelope_snapshots__snapshot_log_envelope_with_session_and_trace.snap
docs/: README.md  architecture.md  cli.md  conformance.md  getting-started.md  recipes.md  transports.md  troubleshooting.md
docs/diagrams/: README.md  architecture-dark.dot  architecture-light.dot
docs/guides/: auth.md  delegation.md  errors.md  job-events.md  jobs.md  leases.md  observability.md  resume.md  sessions.md  vendor-extensions.md
examples/: 01_minimal_session.rs  02_tool_invoke.rs  README.md  ack_backpressure.rs  cancellation.rs  capability_negotiation.rs  custom_auth.rs  idempotent_retry.rs  lease_violation.rs  progress.rs  stdio.rs  tracing.rs
examples/agent_versions/: main.rs
examples/cost_budget/: main.rs
examples/heartbeats/: main.rs
examples/human_input/: README.md  channels.rs  main.rs
examples/job_subscribe/: main.rs
examples/lease_revocation/: README.md  sql.rs
examples/mcp/: README.md
examples/permission_challenge/: README.md  main.rs
examples/provisioned_credentials/: README.md
examples/reasoning_streams/: README.md  main.rs
examples/result_chunk/: main.rs
examples/resumability/: main.rs  steps.rs
examples/session_ack/: main.rs
examples/session_heartbeat/: main.rs
examples/session_list_jobs/: main.rs
planning/v1.1/: 01-spec-delta.md  02-current-audit.md  03-libraries.md  04-architecture.md  05-middleware.md  06-examples.md  07-tests.md  08-docs-readme.md  09-diagrams.md  10-synthesis.md
recipes/: README.md
recipes/email-vendor-leases/: client.rs  server.rs
recipes/mcp-skill/: SKILL.md  client.rs  server.rs
recipes/multi-agent-budget/: client.rs  server.rs
recipes/stream-resume/: client.rs  server.rs
scripts/: coverage.sh  gen-api-docs.py
src/: envelope.rs  error.rs  extensions.rs  ids.rs  lib.rs
src/auth/: bearer.rs  jwt.rs  mod.rs  none.rs
src/client/: api.rs  handlers.rs  mod.rs
src/messages/: execution.rs  human.rs  mod.rs  permissions.rs  session.rs  subscriptions.rs
src/runtime/: artifact.rs  context.rs  credentials.rs  job.rs  mod.rs  server.rs  session.rs  subscription.rs  tools.rs
src/store/: credentials.rs  eventlog.rs  mod.rs  schema.sql
src/transport/: mod.rs  stdio.rs  websocket.rs
tests/: artifact_dispatch.rs  cancellation.rs  cost_budget.rs  envelope_snapshots.rs  extension_unknown.rs  handshake.rs  human_input.rs  job_lifecycle.rs  job_subscription.rs  live_regressions.rs  model_use.rs  result_chunk.rs  resume.rs  runtime_dispatch.rs  subscription.rs  subscription_dispatch.rs
tests/common/: mod.rs
tests/snapshots/: envelope_snapshots__snapshot_log_envelope_with_session_and_trace.snap  envelope_snapshots__snapshot_metric_envelope_with_priority_and_idempotency_key.snap  envelope_snapshots__snapshot_minimal_ping_envelope.snap
