[package]
name = "arcp"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
description = "Reference implementation of the Agent Runtime Control Protocol (ARCP) v1.0"
repository = "https://github.com/nficano/arpc"
homepage = "https://github.com/nficano/arpc"
documentation = "https://docs.rs/arcp"
authors = ["Nick Ficano <nficano@gmail.com>"]
keywords = ["arcp", "agent", "protocol", "runtime", "rfc"]
categories = ["network-programming", "asynchronous", "api-bindings"]
readme = "README.md"
include = [
    "src/**/*",
    "examples/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE-MIT",
    "LICENSE-APACHE",
    "CHANGELOG.md",
]

[lib]
name = "arcp"
path = "src/lib.rs"

[[bin]]
name = "arcp"
path = "src/bin/arcp.rs"

[features]
default = ["transport-ws", "transport-stdio"]
transport-ws = ["dep:tokio-tungstenite"]
transport-stdio = []

[dependencies]
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "sync",
    "time",
    "io-util",
    "io-std",
    "fs",
    "process",
    "signal",
] }
tokio-util = { version = "0.7", features = ["rt"] }
tokio-stream = "0.1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
ulid = { version = "1", features = ["serde"] }
dashmap = "6"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
async-trait = "0.1"
base64 = "0.22"
rusqlite = { version = "0.32", features = ["bundled"] }
jsonwebtoken = "9"

# Optional transport feature
tokio-tungstenite = { version = "0.24", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["test-util"] }
tokio-test = "0.4"
tracing-test = "0.2"
pretty_assertions = "1"
tempfile = "3"
insta = { version = "1", features = ["json"] }

# Multi-file examples — single-file ones are picked up automatically by Cargo.
[[example]]
name = "subscriptions"
path = "examples/subscriptions/main.rs"

[[example]]
name = "leases"
path = "examples/leases/main.rs"

[[example]]
name = "lease_revocation"
path = "examples/lease_revocation/main.rs"

[[example]]
name = "permission_challenge"
path = "examples/permission_challenge/main.rs"

[[example]]
name = "delegation"
path = "examples/delegation/main.rs"

[[example]]
name = "handoff"
path = "examples/handoff/main.rs"

[[example]]
name = "heartbeats"
path = "examples/heartbeats/main.rs"

[[example]]
name = "resumability"
path = "examples/resumability/main.rs"

[[example]]
name = "reasoning_streams"
path = "examples/reasoning_streams/main.rs"

[[example]]
name = "human_input"
path = "examples/human_input/main.rs"

[[example]]
name = "mcp"
path = "examples/mcp/main.rs"

[lints.rust]
unsafe_code = "deny"
missing_docs = "deny"
unreachable_pub = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "warn"
panic = "deny"
todo = "deny"
unimplemented = "deny"
# Module organisation in protocol code legitimately produces "module name same as enclosing".
module_name_repetitions = "allow"
# Exhaustive matches on canonical taxonomy enums are intentional.
multiple_crate_versions = "allow"
