[workspace]
resolver = "2"
members = [
    "crates/arcp",
    "crates/arcp-core",
    "crates/arcp-client",
    "crates/arcp-runtime",
    "crates/arcp-tower",
    "crates/arcp-axum",
    "crates/arcp-actix-web",
    "crates/arcp-otel",
]

[workspace.package]
version = "2.0.0"
edition = "2021"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
authors = ["Nick Ficano <nficano@gmail.com>"]
repository = "https://github.com/agentruntimecontrolprotocol/rust-sdk"
homepage = "https://github.com/agentruntimecontrolprotocol/rust-sdk"
documentation = "https://docs.rs/arcp"

[workspace.dependencies]
# Internal — published siblings. Kept in sync via workspace.package.version.
arcp-core = { version = "2.0.0", path = "crates/arcp-core" }
arcp-client = { version = "2.0.0", path = "crates/arcp-client" }
arcp-runtime = { version = "2.0.0", path = "crates/arcp-runtime" }

# External
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "sync",
    "time",
    "io-util",
    "io-std",
    "fs",
    "process",
    "signal",
] }
tokio-util = { version = "0.7", features = ["rt"] }
tokio-stream = "0.1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
ulid = { version = "1", features = ["serde"] }
dashmap = "6"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = [
    "serde",
    "clock",
] }
async-trait = "0.1"
base64 = "0.22"
rusqlite = { version = "0.39", features = ["bundled"] }
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
tokio-tungstenite = "0.29"

# Dev
tokio-test = "0.4"
tracing-test = "0.2"
pretty_assertions = "1"
tempfile = "3"
insta = { version = "1", features = ["json"] }

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "deny"
unreachable_pub = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "warn"
panic = "deny"
todo = "deny"
unimplemented = "deny"
module_name_repetitions = "allow"
multiple_crate_versions = "allow"
